Fix the unit test using new parameters class